--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
-    <section class="content">
+    <img class="hero" alt=""/>
+    <main class="content">
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desktop view of a notebook with the core Search Engine Optimization factors written on it."/>
             <h2>Search Engine Optimization</h2>
@@ -47,32 +47,32 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </section>
+    </main>
     <aside class="benefits">
-        <div class="benefit-lead">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Icon for "/>
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Process Icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section >
+        <section  class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Icon "/>
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section >
+        <section  class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </section >
     </aside>
     <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h4>
+        <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
