replace footer h2 with h4

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" alt=""/>
-    <main class="content">
+    <img class="hero" alt="Four people around a table discuss ideas and concepts in the workplace."/>
+    <section class="content">
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desktop view of a notebook with the core Search Engine Optimization factors written on it."/>
             <h2>Search Engine Optimization</h2>
@@ -47,7 +47,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </main>
+    </section>
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -72,11 +72,10 @@
         </section >
     </aside>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
-
 </html>
