--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" alt="Four people around a table discuss ideas and concepts in the workplace."/>
+    <figure class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg"/>
+        <figcaption>Four employees around a table discuss ideas and concepts in the workplace.</figcaption>
+    </figure>
     <section class="content">
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desktop view of a notebook with the core Search Engine Optimization factors written on it."/>
