--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         </nav>
     </header>
     <figure class="hero">
-        <img src="./assets/images/digital-marketing-meeting.jpg"/>
-        <figcaption>Four employees around a table discuss ideas and concepts in the workplace.</figcaption>
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four employees around a table discuss ideas and concepts in the workplace."/>
     </figure>
     <section class="content">
         <article class="search-engine-optimization">
