--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Horiseon's website should read their company's full name -->
     <title>Horiseon Social Solution Services, Inc.</title>
 </head>
 
 <body>
+    <!-- The div for the header section has been replaced with a header tag -->
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- the span here has had a role added so a screen reader can tell the user why it is here-->
+        <h1>Hori<span class="seo" role="emphasis">seo</span>n</h1>
+        <!-- The div for the navigation bar has been replaced with a nav tag-->
         <nav>
             <ul>
                 <li>
@@ -24,25 +28,34 @@
             </ul>
         </nav>
     </header>
+    <!-- The div with the image as a background has been changed to a figure -->
     <figure class="hero">
+        <!-- An image has been added inside our figure so we can give alt text to the image -->
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four employees around a table discuss ideas and concepts in the workplace."/>
     </figure>
+    <!-- The div for this content was replaced with a section tag -->
     <section class="content">
+        <!-- this div has been replaced with an article tag -->
         <article class="search-engine-optimization">
+            <!-- the following image has had alt text added -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desktop view of a notebook with the core Search Engine Optimization factors written on it."/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
+        <!-- this div has been replaced with an article tag -->
         <article id="online-reputation-management" class="online-reputation-management">
+            <!-- the following image has had alt text added -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop with an upward-trending bar graph titled 'Reputation.'"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
+        <!-- this div has been replaced with an article tag -->
         <article id="social-media-marketing" class="social-media-marketing">
+            <!-- the following image has had alt text added -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Aerial view of a marketing team discussing social media marketing topics such as likes, tweets and sharing."/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -50,31 +63,41 @@
             </p>
         </article>
     </section>
+    <!-- the div below this comment was replaced with an aside -->
     <aside class="benefits">
+        <!-- the div here was replaced with a section tag-->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
+            <!-- the following icon has had alt text added -->
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Process Icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section >
+        <!-- the div here was replaced with a section tag -->
         <section  class="benefit-brand">
             <h3>Brand Awareness</h3>
+            <!-- the following icon has had alt text added -->
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section >
+        <!-- the div here was replaced with a section tag -->
         <section  class="benefit-cost">
             <h3>Cost Management</h3>
+            <!-- the following icon has had alt text added -->
             <img src="./assets/images/cost-management.png" alt="Cost Management Icon"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section >
     </aside>
+    <!-- the div here was replaced with a footer tag -->
     <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h2>
+        <!-- the h2 tag on line 100 was replaced with an h4 tag to fall in sequential order with the rest of the headers on this page -->
+        <!-- the emoji on line 100 was wrapped in a span with a role of img and aria label of red heart -->
+        <h4>Made with <span role="img" aria-label="red heart">❤️</span>️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
